crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__show_mr_for_branch.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": {
    "base": "main",
    "body": "Fixes the login flow.",
    "conflict_state": "conflicting",
    "draft": false,
    "handle": "7",
    "head": "abc123",
    "jobs": [],
    "review_state": null,
    "state": "open",
    "threads": [],
    "title": "Fix login",
    "url": "https://github.test/acme/widget/pull/7"
  },
  "type": "change_request"
}
