crates/products/agent-tools/tools/src/api/github/tests/snapshots/wt_tools__api__github__tests__cli_output__github_cli_json__wait_run.snap
---
source: crates/products/agent-tools/tools/src/api/github/tests/cli_output.rs
expression: "serde_json::to_string_pretty(&value).unwrap()"
---
{
  "data": {
    "branch": "wt/fix-login",
    "handle": "91",
    "head": "abc123",
    "name": "CI",
    "state": "success",
    "trigger": "pull_request",
    "url": "https://github.test/runs/91"
  },
  "type": "ci_run"
}
